# comocoto-xgeeks

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup_server.sh
app/: historical_data_list.html  index.html  new_requests.html  popup_form.html  popup_message.html  predictions_and_neighbours.html  training_results.html
configs/: historic_data.yaml  new_requests.yaml
data/: historic_data.json  new_data.json
nginx/: budger-app.conf
ngix/: budger-app.conf
prompts/: create_response.j2  historic_budgets.j2  new_requests.j2  parse_request.j2
scripts/: generate_syntetic_data.py
src/comocoto_xgeeks/: __init__.py  app.py  bedrock.py  budget_estimator.py  knn_pipeline.py  utils.py
static/css/: style.css
